fixed some spacing issues

--- a/src/style/_anchor.scss
+++ b/src/style/_anchor.scss
@@ -29,7 +29,6 @@ footer {
       &:after {
         background-color: $accent;
         opacity: 1;
-        transform: translateY(0.2em);
       }
     }
   }
