--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -3,8 +3,4 @@
 footer {
   padding: 64px min(128px, 12.5vw);
   color: $foreground;
-
-  > p {
-    margin: 1em 0 0 0;
-  }
 }
