--- a/src/style/_normalize.scss
+++ b/src/style/_normalize.scss
@@ -59,6 +59,7 @@ h6 {
 
 p {
   margin: 0;
+  line-height: 1.75em;
 }
 
 cite {
